GO_Compiler_Project/parser/golite_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package parser // GoliteParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type GoliteParser struct {
	*antlr.BaseParser
}

var goliteparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func goliteparserParserInit() {
	staticData := &goliteparserParserStaticData
	staticData.literalNames = []string{
		"", "", "'printf'", "'fmt'", "'type'", "'struct'", "'var'", "'nil'",
		"'return'", "'for'", "'if'", "'else'", "'scan'", "'int'", "'func'",
		"'bool'", "'true'", "'false'", "'delete'", "'new'", "", "", "'||'",
		"'&&'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'!'", "'='",
		"'+'", "'-'", "'/'", "'*'", "';'", "','", "'.'", "'{'", "'}'", "'('",
		"')'",
	}
	staticData.symbolicNames = []string{
		"", "NUMBER", "PRINTF", "FMT", "TYPE", "STRUCT", "VAR", "NIL", "RETURN",
		"FOR", "IF", "ELSE", "SCAN", "INT", "FUNC", "BOOL", "TRUE", "FALSE",
		"DELETE", "NEW", "ID", "STRING", "OR", "ANDCOMP", "ISEQUAL", "NOTEQUAL",
		"GREATERTHAN", "LESSTHAN", "GREATEREQUAL", "LESSEQUAL", "NOT", "EQUALS",
		"PLUS", "SUB", "FSLASH", "ASTERISK", "SEMICOLON", "COMMA", "PERIOD",
		"LCURLYBRACE", "RCURLYBRACE", "LPAREN", "RPAREN", "WS", "COMMENTS",
	}
	staticData.ruleNames = []string{
		"program", "typedeclaration", "fields", "fieldsprime", "decl", "type",
		"declaration", "declarationprime", "function", "funcprime", "parameters",
		"parametersprime", "statement", "block", "delete", "assignment", "assignmentprime",
		"print", "conditional", "conditionalprime", "loop", "rtrn", "rtrnprime",
		"read", "invocation", "arguments", "argumentsprime", "expression", "expressionprime",
		"boolterm", "boolprime", "equalterm", "equalprime", "relationterm",
		"relationprime", "simpleterm", "simpleprime", "term", "termprime", "unaryterm",
		"selectorterm", "selectorprime", "factor",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GoliteParserInit initializes any static state used to implement GoliteParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGoliteParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GoliteParserInit() {
	staticData := &goliteparserParserStaticData
	staticData.once.Do(goliteparserParserInit)
}

// NewGoliteParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGoliteParser(input antlr.TokenStream) *GoliteParser {
	GoliteParserInit()
	this := new(GoliteParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &goliteparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// GoliteParser tokens.
const (
	GoliteParserEOF          = antlr.TokenEOF
	GoliteParserNUMBER       = 1
	GoliteParserPRINTF       = 2
	GoliteParserFMT          = 3
	GoliteParserTYPE         = 4
	GoliteParserSTRUCT       = 5
	GoliteParserVAR          = 6
	GoliteParserNIL          = 7
	GoliteParserRETURN       = 8
	GoliteParserFOR          = 9
	GoliteParserIF           = 10
	GoliteParserELSE         = 11
	GoliteParserSCAN         = 12
	GoliteParserINT          = 13
	GoliteParserFUNC         = 14
	GoliteParserBOOL         = 15
	GoliteParserTRUE         = 16
	GoliteParserFALSE        = 17
	GoliteParserDELETE       = 18
	GoliteParserNEW          = 19
	GoliteParserID           = 20
	GoliteParserSTRING       = 21
	GoliteParserOR           = 22
	GoliteParserANDCOMP      = 23
	GoliteParserISEQUAL      = 24
	GoliteParserNOTEQUAL     = 25
	GoliteParserGREATERTHAN  = 26
	GoliteParserLESSTHAN     = 27
	GoliteParserGREATEREQUAL = 28
	GoliteParserLESSEQUAL    = 29
	GoliteParserNOT          = 30
	GoliteParserEQUALS       = 31
	GoliteParserPLUS         = 32
	GoliteParserSUB          = 33
	GoliteParserFSLASH       = 34
	GoliteParserASTERISK     = 35
	GoliteParserSEMICOLON    = 36
	GoliteParserCOMMA        = 37
	GoliteParserPERIOD       = 38
	GoliteParserLCURLYBRACE  = 39
	GoliteParserRCURLYBRACE  = 40
	GoliteParserLPAREN       = 41
	GoliteParserRPAREN       = 42
	GoliteParserWS           = 43
	GoliteParserCOMMENTS     = 44
)

// GoliteParser rules.
const (
	GoliteParserRULE_program          = 0
	GoliteParserRULE_typedeclaration  = 1
	GoliteParserRULE_fields           = 2
	GoliteParserRULE_fieldsprime      = 3
	GoliteParserRULE_decl             = 4
	GoliteParserRULE_type             = 5
	GoliteParserRULE_declaration      = 6
	GoliteParserRULE_declarationprime = 7
	GoliteParserRULE_function         = 8
	GoliteParserRULE_funcprime        = 9
	GoliteParserRULE_parameters       = 10
	GoliteParserRULE_parametersprime  = 11
	GoliteParserRULE_statement        = 12
	GoliteParserRULE_block            = 13
	GoliteParserRULE_delete           = 14
	GoliteParserRULE_assignment       = 15
	GoliteParserRULE_assignmentprime  = 16
	GoliteParserRULE_print            = 17
	GoliteParserRULE_conditional      = 18
	GoliteParserRULE_conditionalprime = 19
	GoliteParserRULE_loop             = 20
	GoliteParserRULE_rtrn             = 21
	GoliteParserRULE_rtrnprime        = 22
	GoliteParserRULE_read             = 23
	GoliteParserRULE_invocation       = 24
	GoliteParserRULE_arguments        = 25
	GoliteParserRULE_argumentsprime   = 26
	GoliteParserRULE_expression       = 27
	GoliteParserRULE_expressionprime  = 28
	GoliteParserRULE_boolterm         = 29
	GoliteParserRULE_boolprime        = 30
	GoliteParserRULE_equalterm        = 31
	GoliteParserRULE_equalprime       = 32
	GoliteParserRULE_relationterm     = 33
	GoliteParserRULE_relationprime    = 34
	GoliteParserRULE_simpleterm       = 35
	GoliteParserRULE_simpleprime      = 36
	GoliteParserRULE_term             = 37
	GoliteParserRULE_termprime        = 38
	GoliteParserRULE_unaryterm        = 39
	GoliteParserRULE_selectorterm     = 40
	GoliteParserRULE_selectorprime    = 41
	GoliteParserRULE_factor           = 42
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetTyDec returns the tyDec rule contexts.
	GetTyDec() ITypedeclarationContext

	// GetDec returns the dec rule contexts.
	GetDec() IDeclarationContext

	// GetFunc_ returns the func_ rule contexts.
	GetFunc_() IFunctionContext

	// SetTyDec sets the tyDec rule contexts.
	SetTyDec(ITypedeclarationContext)

	// SetDec sets the dec rule contexts.
	SetDec(IDeclarationContext)

	// SetFunc_ sets the func_ rule contexts.
	SetFunc_(IFunctionContext)

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	tyDec  ITypedeclarationContext
	dec    IDeclarationContext
	func_  IFunctionContext
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GoliteParserRULE_program
	return p
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoliteParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) GetTyDec() ITypedeclarationContext { return s.tyDec }

func (s *ProgramContext) GetDec() IDeclarationContext { return s.dec }

func (s *ProgramContext) GetFunc_() IFunctionContext { return s.func_ }

func (s *ProgramContext) SetTyDec(v ITypedeclarationContext) { s.tyDec = v }

func (s *ProgramContext) SetDec(v IDeclarationContext) { s.dec = v }

func (s *ProgramContext) SetFunc_(v IFunctionContext) { s.func_ = v }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(GoliteParserEOF, 0)
}

func (s *ProgramContext) AllTypedeclaration() []ITypedeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ITypedeclarationContext); ok {
			len++
		}
	}

	tst := make([]ITypedeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ITypedeclarationContext); ok {
			tst[i] = t.(ITypedeclarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Typedeclaration(i int) ITypedeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypedeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypedeclarationContext)
}

func (s *ProgramContext) AllDeclaration() []IDeclarationContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDeclarationContext); ok {
			len++
		}
	}

	tst := make([]IDeclarationContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDeclarationContext); ok {
			tst[i] = t.(IDeclarationContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Declaration(i int) IDeclarationContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclarationContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclarationContext)
}

func (s *ProgramContext) AllFunction() []IFunctionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFunctionContext); ok {
			len++
		}
	}

	tst := make([]IFunctionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFunctionContext); ok {
			tst[i] = t.(IFunctionContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Function(i int) IFunctionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (p *GoliteParser) Program() (localctx IProgramContext) {
	this := p
	_ = this

	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GoliteParserRULE_program)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(89)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == GoliteParserTYPE {
		{
			p.SetState(86)

			var _x = p.Typedeclaration()

			localctx.(*ProgramContext).tyDec = _x
		}

		p.SetState(91)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(95)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == GoliteParserVAR {
		{
			p.SetState(92)

			var _x = p.Declaration()

			localctx.(*ProgramContext).dec = _x
		}

		p.SetState(97)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(101)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == GoliteParserFUNC {
		{
			p.SetState(98)

			var _x = p.Function()

			localctx.(*ProgramContext).func_ = _x
		}

		p.SetState(103)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(104)
		p.Match(GoliteParserEOF)
	}

	return localctx
}

// ITypedeclarationContext is an interface to support dynamic dispatch.
type ITypedeclarationContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetFlds returns the flds rule contexts.
	GetFlds() IFieldsContext

	// SetFlds sets the flds rule contexts.
	SetFlds(IFieldsContext)

	// IsTypedeclarationContext differentiates from other interfaces.
	IsTypedeclarationContext()
}

type TypedeclarationContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	flds   IFieldsContext
}

func NewEmptyTypedeclarationContext() *TypedeclarationContext {
	var p = new(TypedeclarationContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GoliteParserRULE_typedeclaration
	return p
}

func (*TypedeclarationContext) IsTypedeclarationContext() {}

func NewTypedeclarationContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypedeclarationContext {
	var p = new(TypedeclarationContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoliteParserRULE_typedeclaration

	return p
}

func (s *TypedeclarationContext) GetParser() antlr.Parser { return s.parser }

func (s *TypedeclarationContext) GetFlds() IFieldsContext { return s.flds }

func (s *TypedeclarationContext) SetFlds(v IFieldsContext) { s.flds = v }

func (s *TypedeclarationContext) TYPE() antlr.TerminalNode {
	return s.GetToken(GoliteParserTYPE, 0)
}

func (s *TypedeclarationContext) ID() antlr.TerminalNode {
	return s.GetToken(GoliteParserID, 0)
}

func (s *TypedeclarationContext) STRUCT() antlr.TerminalNode {
	return s.GetToken(GoliteParserSTRUCT, 0)
}

func (s *TypedeclarationContext) LCURLYBRACE() antlr.TerminalNode {
	return s.GetToken(GoliteParserLCURLYBRACE, 0)
}

func (s *TypedeclarationContext) RCURLYBRACE() antlr.TerminalNode {
	return s.GetToken(GoliteParserRCURLYBRACE, 0)
}

func (s *TypedeclarationContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(GoliteParserSEMICOLON, 0)
}

func (s *TypedeclarationContext) Fields() IFieldsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldsContext)
}

func (s *TypedeclarationContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypedeclarationContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TypedeclarationContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.EnterTypedeclaration(s)
	}
}

func (s *TypedeclarationContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.ExitTypedeclaration(s)
	}
}

func (p *GoliteParser) Typedeclaration() (localctx ITypedeclarationContext) {
	this := p
	_ = this

	localctx = NewTypedeclarationContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GoliteParserRULE_typedeclaration)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(106)
		p.Match(GoliteParserTYPE)
	}
	{
		p.SetState(107)
		p.Match(GoliteParserID)
	}
	{
		p.SetState(108)
		p.Match(GoliteParserSTRUCT)
	}
	{
		p.SetState(109)
		p.Match(GoliteParserLCURLYBRACE)
	}
	{
		p.SetState(110)

		var _x = p.Fields()

		localctx.(*TypedeclarationContext).flds = _x
	}
	{
		p.SetState(111)
		p.Match(GoliteParserRCURLYBRACE)
	}
	{
		p.SetState(112)
		p.Match(GoliteParserSEMICOLON)
	}

	return localctx
}

// IFieldsContext is an interface to support dynamic dispatch.
type IFieldsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetDec returns the dec rule contexts.
	GetDec() IDeclContext

	// SetDec sets the dec rule contexts.
	SetDec(IDeclContext)

	// IsFieldsContext differentiates from other interfaces.
	IsFieldsContext()
}

type FieldsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	dec    IDeclContext
}

func NewEmptyFieldsContext() *FieldsContext {
	var p = new(FieldsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GoliteParserRULE_fields
	return p
}

func (*FieldsContext) IsFieldsContext() {}

func NewFieldsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldsContext {
	var p = new(FieldsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoliteParserRULE_fields

	return p
}

func (s *FieldsContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldsContext) GetDec() IDeclContext { return s.dec }

func (s *FieldsContext) SetDec(v IDeclContext) { s.dec = v }

func (s *FieldsContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(GoliteParserSEMICOLON, 0)
}

func (s *FieldsContext) Decl() IDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclContext)
}

func (s *FieldsContext) AllFieldsprime() []IFieldsprimeContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFieldsprimeContext); ok {
			len++
		}
	}

	tst := make([]IFieldsprimeContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFieldsprimeContext); ok {
			tst[i] = t.(IFieldsprimeContext)
			i++
		}
	}

	return tst
}

func (s *FieldsContext) Fieldsprime(i int) IFieldsprimeContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFieldsprimeContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFieldsprimeContext)
}

func (s *FieldsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.EnterFields(s)
	}
}

func (s *FieldsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.ExitFields(s)
	}
}

func (p *GoliteParser) Fields() (localctx IFieldsContext) {
	this := p
	_ = this

	localctx = NewFieldsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GoliteParserRULE_fields)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(114)

		var _x = p.Decl()

		localctx.(*FieldsContext).dec = _x
	}
	{
		p.SetState(115)
		p.Match(GoliteParserSEMICOLON)
	}
	p.SetState(119)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == GoliteParserID {
		{
			p.SetState(116)
			p.Fieldsprime()
		}

		p.SetState(121)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IFieldsprimeContext is an interface to support dynamic dispatch.
type IFieldsprimeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldsprimeContext differentiates from other interfaces.
	IsFieldsprimeContext()
}

type FieldsprimeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldsprimeContext() *FieldsprimeContext {
	var p = new(FieldsprimeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GoliteParserRULE_fieldsprime
	return p
}

func (*FieldsprimeContext) IsFieldsprimeContext() {}

func NewFieldsprimeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldsprimeContext {
	var p = new(FieldsprimeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoliteParserRULE_fieldsprime

	return p
}

func (s *FieldsprimeContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldsprimeContext) Decl() IDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclContext)
}

func (s *FieldsprimeContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(GoliteParserSEMICOLON, 0)
}

func (s *FieldsprimeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldsprimeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldsprimeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.EnterFieldsprime(s)
	}
}

func (s *FieldsprimeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.ExitFieldsprime(s)
	}
}

func (p *GoliteParser) Fieldsprime() (localctx IFieldsprimeContext) {
	this := p
	_ = this

	localctx = NewFieldsprimeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GoliteParserRULE_fieldsprime)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(122)
		p.Decl()
	}
	{
		p.SetState(123)
		p.Match(GoliteParserSEMICOLON)
	}

	return localctx
}

// IDeclContext is an interface to support dynamic dispatch.
type IDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetId returns the id token.
	GetId() antlr.Token

	// SetId sets the id token.
	SetId(antlr.Token)

	// GetTy returns the ty rule contexts.
	GetTy() ITypeContext

	// SetTy sets the ty rule contexts.
	SetTy(ITypeContext)

	// IsDeclContext differentiates from other interfaces.
	IsDeclContext()
}

type DeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	id     antlr.Token
	ty     ITypeContext
}

func NewEmptyDeclContext() *DeclContext {
	var p = new(DeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = GoliteParserRULE_decl
	return p
}

func (*DeclContext) IsDeclContext() {}

func NewDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclContext {
	var p = new(DeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = GoliteParserRULE_decl

	return p
}

func (s *DeclContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclContext) GetId() antlr.Token { return s.id }

func (s *DeclContext) SetId(v antlr.Token) { s.id = v }

func (s *DeclContext) GetTy() ITypeContext { return s.ty }

func (s *DeclContext) SetTy(v ITypeContext) { s.ty = v }

func (s *DeclContext) ID() antlr.TerminalNode {
	return s.GetToken(GoliteParserID, 0)
}

func (s *DeclContext) Type_() ITypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITypeContext)
}

func (s *DeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.EnterDecl(s)
	}
}

func (s *DeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GoliteParserListener); ok {
		listenerT.ExitDecl(s)
	}
}

func (p *GoliteParser) Decl() (localctx IDeclContext) {
	this := p
	_ = this

	localctx = NewDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, GoliteParserRULE_decl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(125)

		var _m = p.Match(GoliteParserID)

		localctx.(*DeclContext).id = _m
	}
	{
		p.SetState(126)

		var _x = p.Type_()

		localctx.(*DeclContext).ty = _x
	}

	return localctx
}

// ITypeContext is an interface to support dynamic dispatch.
type ITypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser
